# tensorlink

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Lightpaper v1.md  MANIFEST.in  README.md  Whitepaper V1 - ROUGH DRAFT  Whitepaper V1 - ROUGH DRAFT.md  Whitepaper v1 - ROUGH DRAFT.md  Whitepaper v1.md  main.py  node.py  pyproject.toml  requirements.txt  rsa.py  setup.py  test.py  test_dist.py  worker.py
.github/: CONTRIBUTING.md
.github/workflows/: lint.yaml  linter.yaml  pytest.yaml  release.yaml  test.yaml
config/: SmartNodes.json  SmartnodesMultiSig.json  config.json  custom_install.py
docs/: LIGHTPAPER.md  Lightpaper v1.md  Lightpaper.md
examples/: api_example.py  chatbot_example.py  distributed_workflow.py  fragmented_model.py  model_example.py  run_local_node.py  user_workflow.py
node/: node.py
scripts/: config.json  run-validator.sh  run-worker.sh  run_validator.py  run_worker.py  run_worker.sh
src/: __init__.py  coordinator.py  main.py  manager.py  node.py  node_connection.py  smartnode.py  smartnodes.json  test.py
src/assets/: SmartNodes.json
src/auth/: rsa.py
src/config/: Smartnodes.json  SmartnodesMultiSig.json  config.json  custom_install.py
src/cryptography/: rsa.py  substrate.py
src/ml/: distributed.py  distributed2.py  graphing.py  master.py  model_analyzer.py  model_manager.py  proof_of_learning.py  rpc_worker.py  torch_node.py  utils.py  worker.py
src/ml/testing/: graphing.py  proof_of_learning.py
src/mpc/: coordinator.py  nodes.py
src/node/: node.py  node_connection.py
src/nodes/: user.py  validator.py  worker.py
src/p2p/: blockchain.py  connection.py  dht_node.py  linked_node.py  node.py  node_api.py  smart_node.py  smartnode.py  test.py  torch_node.py
src/roles/: user.py  validator.py  worker.py
src/tests/: node_test.py
tensorlink/: __init__.py
tensorlink/api/: models.py  node.py
tensorlink/config/: SmartnodesCoordinator.json  SmartnodesCore.json  SmartnodesERC20.json  SmartnodesMultiSig.json  config.json  custom_install.py  models.json
tensorlink/crypto/: rsa.py
tensorlink/ml/: distributed.py  graphing.py  injector.py  module.py  optim.py  proofs.py  utils.py  validator.py  worker.py
tensorlink/ml/testing/: graphing.py
tensorlink/mpc/: nodes.py  shared_memory.py
tensorlink/node/: user.py  validator.py  worker.py
tensorlink/nodes/: contract_manager.py  job_monitor.py  keeper.py  user.py  validator.py  worker.py
tensorlink/p2p/: connection.py  dht.py  monitor.py  node_api.py  rate_limiter.py  smart_node.py  smartnode.py  torch_node.py  torchnode.py
tensorlink/roles/: contract_manager.py  job_monitor.py  user.py  validator.py  worker.py
tests/: conftest.py  run_node_process.py  run_node_threads.py  test_dht.py  test_distributed.py  test_distributed_model.py  test_distributed_workers.py  test_full_train.py  test_job_monitor.py  test_local_dist_train.py  test_model.py  test_node.py  test_nodes.py  test_pol.py  test_roles.py  test_smartnodes.py  test_train.py  test_worker.py  test_workers.py  useful_scripts.py
tests/ml/: test_dist_train.py  test_dist_train_local.py  test_dist_train_online.py  test_distribution.py  test_full_train.py  test_job.py  test_local_dist_train.py  test_local_train.py  test_model.py  test_pol.py  useful_scripts.py
tests/node/: test_all.py  test_all_nodes.py  test_dht.py  test_node.py
tests/run/: test_all.py  test_roles.py  test_user.py  test_validator.py  test_worker.py
tests/sandbox/: model_sandbox.py  run_all_nodes.py  run_node_process.py
