[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorlink"
version = "0.0.1"
authors = [
  { name="Smartnodes Lab", email="smartnodes-lab@proton.me" }
]
description = """
    Tensorlink is a generalized, plug-and-play framework for distributed model scaling in PyTorch.
    It provides tools for parsing and distributing models across a network of peers, and integrates directly into existing
    PyTorch workflows.
"""
readme = "README.md"
requires-python = ">=3.11.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://smart-nodes.xyz/tensorlink"
Documentation = "https://smart-nodes.xyz/docs/overview"
Repository = "https://github.com/smartnodes-lab/tensorlink"