[tool.poetry]
name = "tensorlink"
version = "0.1.5.post1"
description = "Tensorlink is a library designed to simplify distributed model training and inference with PyTorch, offering tools to easily distribute models across a network of peers and share computational resources both locally and globally."
authors = ["Smartnodes Lab <smartnodes-lab@proton.me>"]
readme = "README.md"
packages = [{include = "tensorlink"}]
homepage = "https://smartnodes.ca/tensorlink"
documentation = "https://smartnodes.ca/docs"
repository = "https://github.com/smartnodes-lab/tensorlink"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.10"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.10.10"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
bitarray = "2.9.3"
blinker = "1.8.2"
build = "1.2.2.post1"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.4.0"
ckzg = "2.0.1"
click = "8.1.7"
contourpy = "1.3.0"
cryptography = "43.0.1"
cycler = "0.12.1"
cytoolz = "1.0.0"
datasets = "3.0.1"
dill = "0.3.8"
eth-account = "0.13.4"
eth-hash = "0.7.0"
eth-keyfile = "0.8.1"
eth-keys = "0.5.1"
eth-rlp = "2.1.0"
eth-typing = "5.0.0"
eth-utils = "5.0.0"
eth-abi = "5.1.0"
filelock = "3.16.1"
findimports = "2.5.1"
flask = "3.0.3"
flask-cors = "5.0.0"
fastapi = "0.115.11"
fonttools = "4.54.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
graphviz = "0.20.3"
hexbytes = "1.2.1"
huggingface-hub = "0.25.2"
idna = "3.10"
importlib-metadata = "8.5.0"
importlib-resources = "6.4.5"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
kiwisolver = "1.4.7"
markupsafe = "3.0.1"
matplotlib = "3.9.2"
miniupnpc = "2.2.8"
mpmath = "1.3.0"
multidict = "6.1.0"
multiprocess = "0.70.16"
networkx = "3.2.1"
numpy = "2.0.2"
packaging = "24.1"
pandas = "2.2.3"
parsimonious = "0.10.0"
pillow = "10.4.0"
propcache = "0.2.0"
psutil = "7.0.0"
pyarrow = "17.0.0"
pybind11 = "2.13.6"
pycparser = "2.22"
pycryptodome = "3.21.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyparsing = "3.2.0"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyunormalize = "16.0.0"
pyyaml = "6.0.2"
regex = "2024.9.11"
requests = "2.32.3"
rlp = "4.0.1"
safetensors = "0.4.5"
six = "1.16.0"
sympy = "1.13.3"
tokenizers = "0.20.1"
tomli = "2.0.2"
toolz = "1.0.0"
torch = "2.4.1"
torchviz = "0.0.2"
tqdm = "4.66.5"
transformers = "4.45.2"
types-requests = "2.32.0.20240914"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
uvicorn = "0.34.0"
web3 = "7.3.0"
websockets = "13.1"
werkzeug = "3.0.4"
xxhash = "3.5.0"
yarl = "1.15.1"
zipp = "3.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
coverage = "^7.4.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
max-complexity = 10

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
