[tool.poetry]
name = "tensorlink"
version = "0.1.6.post1"
description = "Tensorlink is a library designed to simplify distributed model training and inference with PyTorch, offering tools to easily distribute models across a network of peers and share computational resources both locally and globally."
authors = ["Smartnodes Lab <smartnodes-lab@proton.me>"]
readme = "README.md"
packages = [{include = "tensorlink"}]
homepage = "https://smartnodes.ca/tensorlink"
documentation = "https://smartnodes.ca/docs"
repository = "https://github.com/smartnodes-lab/tensorlink"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^45.0.3"
fastapi = "0.115.11"
graphviz = "0.20.3"
matplotlib = "3.9.2"
miniupnpc = "2.2.8"
multiprocess = "0.70.16"
networkx = "3.2.1"
psutil = "7.0.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
regex = "2024.9.11"
requests = "2.32.3"
safetensors = "0.4.5"
tokenizers = "^0.21.1"
torch = "^2.7.0"
torchviz = "0.0.2"
tqdm = "4.66.5"
transformers = "^4.52.4"
uvicorn = "0.34.0"
web3 = "7.3.0"
huggingface-hub = "^0.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
coverage = "^7.4.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
max-complexity = 10

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
